feat: login, home page, myList, fullList

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" href="./src/assets/1f3ac.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Icon</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="bg-slate-900 text-gray-200 font-sans">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
